--- a/webapp/src/app/shared/dropdown/dropdown.component.html
+++ b/webapp/src/app/shared/dropdown/dropdown.component.html
@@ -1,7 +1,7 @@
 <div class="dropdown-wrapper">
     <mat-form-field>
         <mat-label>{{placeholder}}</mat-label>
-        <mat-select [disabled]="isDisabled" disableOptionCentering (closed)="onClose()"
+        <mat-select [disabled]="isDisabled" disableOptionCentering (closed)="onClose()" [required]="required"
             (selectionChange)="selectedValue($event.value)" [(ngModel)]="selectedOption">
             <mat-select-trigger>
                 <div [class.optionImage]="optionImage">
