fix: fixed policy details api issue for user and added isAutofixEnabled property

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
@@ -184,3 +184,11 @@ gap: 20px;
   flex-direction: column;
   width: 33%;
 }
+
+.table-wrapper{
+  height: 300px;
+}
+
+.policy-knowledgebase-wrapper ::ng-deep .mat-form-field-label-wrapper{
+  top: -13px !important;
+}
