chore: componentized asset dashboard, fixed server side sorting

--- a/webapp/src/app/shared/date-selection/date-selection.component.html
+++ b/webapp/src/app/shared/date-selection/date-selection.component.html
@@ -13,7 +13,7 @@
     </div>
     </mat-card-content>
     <mat-card-actions>
-    <button style="margin-left: auto; color: var(--primary-400);" mat-button (click)="customDateSelected(fromDate, toDate)">
+    <button style="margin-left: auto; color: var(--primary-400);" (click)="customDateSelected(fromDate, toDate)">
         Apply
     </button>
     </mat-card-actions>
