fix: fixed few UI bugs

--- a/webapp/src/app/pacman-features/modules/admin/system-management/system-management.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/system-management/system-management.component.html
@@ -38,7 +38,7 @@
       >
         <div class="flex each-item flex-between no-shrink">
           <div class="rules">
-            <div class="left-header">Rules</div>
+            <div class="left-header">Policies</div>
             <div class="left-element">
               This action will stop Paladin Cloud compliance evaluation for all
               cloud resources.
@@ -99,7 +99,7 @@
       class="action-text text-center"
     >
       This action will {{ isCheckedRules ? "start" : "stop" }} Paladin Cloud
-      compliance evaluation for all cloud resources ( Rules ).
+      compliance evaluation for all cloud resources ( Policies ).
     </div>
     <div
       *ngIf="selectedValue === 'job' && !showLoader && errorVal == 0"
