--- a/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
@@ -24,12 +24,12 @@
             <ul>
                 <li class="widget-wrapper relative">
                     <div class="relative">
-                        <app-table style="height: 100%; width: 100%;" (cellSelectEventEmitter)="goToDetails($event)"
+                        <app-table style="height: 100%; width: 100%;" (rowSelectEventEmitter)="goToDetails($event)" (cellSelectEventEmitter)="goToDetails($event)"
                             [data]="tableData" [columnWidths]="columnWidths" (headerColNameSelected)="handleHeaderColNameSelection($event)" 
                             [headerColName]="headerColName" [direction]="direction" [whiteListColumns]="whiteListColumns"
                             (searchCalledEventEmitter)="callNewSearch($event)"
                             [searchQuery]="searchTxt" (nextPageCalled)="nextPage($event)" [tableErrorMessage]='errorMessage'
-                            [showSearchBar]="true" [showDownloadBtn]="false" [showAddRemoveCol]="false" [showFilterBtn]="false" [onScrollDataLoader]="onScrollDataLoader" [totalRows]="totalRows"
+                            [showSearchBar]="true" [showAddRemoveCol]="false" [showFilterBtn]="false" [onScrollDataLoader]="onScrollDataLoader" [totalRows]="totalRows"
                             [tableScrollTop]="tableScrollTop" [tableDataLoaded]="tableDataLoaded" [columnsSortFunctionMap]="columnsSortFunctionMap"
                             [rowClickable]="false">
                         </app-table>
