--- a/webapp/src/app/pacman-features/modules/admin/sticky-exceptions/create-sticky-exceptions/create-sticky-exceptions.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/sticky-exceptions/create-sticky-exceptions/create-sticky-exceptions.component.html
@@ -157,7 +157,7 @@
                                                 <h1>{{attributeDetail.targetName}}</h1>
                                                 <div class="attrspacer"></div>
                                                 <h3 class="added">{{attributeDetail.policies.length}}</h3>
-                                                <h2 class="text">Rules added</h2>
+                                                <h2 class="text">Policies added</h2>
                                                 <div class="btnctn"><button class="attrbutton"
                                                         (click)="openAttributeConfigure(attributeDetail, idx)">CONFIG</button>
                                                 </div>
@@ -274,11 +274,11 @@
                                             <div class="formctn rule-attribute">
                                                 <div class="input-box">
                                                     <ul class="parameters rules">
-                                                        <label>Select Rule Name :</label>
+                                                        <label>Select Policy Name :</label>
                                                         <app-dropdown [items]="selectedallPolicies"
                                                             [selectedItem]="attributeName"
                                                             (selected)="onSelectRuleName($event)"
-                                                            [placeholder]="'Select Rule Name Required'">
+                                                            [placeholder]="'Select Policy Name Required'">
                                                         </app-dropdown>
                                                     </ul>
                                                     <button class="tmbutton btm30 ib"
