--- a/webapp/src/app/pacman-features/modules/compliance/card/card.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/card/card.component.html
@@ -7,7 +7,7 @@
         <div mat-button #menuTrigger="matMenuTrigger" [matMenuTriggerFor]="menu"></div>
           <mat-menu #menu="matMenu">
               <div class="date-selection-modal" >
-                  <app-date-selection [fromDate]="fromDate" [toDate]="toDate" (datesSelected)="dateIntervalSelected($event.from, $event.to)"></app-date-selection>
+                  <app-date-selection (datesSelected)="dateIntervalSelected($event.from, $event.to)"></app-date-selection>
               </div>
           </mat-menu>
       </div>
