chore: removed back button from UI

--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/create-asset-groups/create-asset-groups.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/create-asset-groups/create-asset-groups.component.html
@@ -19,8 +19,8 @@
     </div>
     <div class="floating-widgets-header flex flex-between">
         <div>
-            <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;"
-                src="../assets/icons/left-arrow.svg">
+            <!-- <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;"
+                src="../assets/icons/left-arrow.svg"> -->
             <h1 class="title-text">{{pageTitle}}</h1>
         </div>
         <div class="md-stepper-horizontal orange" [ngClass]="{'md-stepper-horizontal-update':!isCreate}">
