--- a/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
@@ -15,9 +15,9 @@
  <div class="floating-widgets-section flex flex-col issue-listing-wrapper" [class.filter-absent]='filters.length == 0'>
     <div class="floating-widgets-header flex flex-between admin-widgets-header">
         <h1>{{pageTitle}}</h1>
-        <div class="flex relative z-index textarea-button">
+        <!-- <div class="flex relative z-index textarea-button">
             <button class="submit-btn" type="button" (click)='goToCreatePolicy()'> Create Policy</button>
-        </div>
+        </div> -->
     </div>
     <div class="floating-widgets-container data-table-container">
         <section>
