--- a/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.html
@@ -19,8 +19,8 @@
                 [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
         </div>
         <div class="floating-widgets-header flex flex-align-center assets-header">
-            <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;"
-                src="../assets/icons/left-arrow.svg">
+            <!-- <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;"
+                src="../assets/icons/left-arrow.svg"> -->
             <h1 class="title-text">Asset Details </h1>
             <div class="header-description" title="{{resourceType}}/{{decodedResourceId}}">
                 ({{resourceType}}/{{decodedResourceId}})</div>
