--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
@@ -17,7 +17,7 @@
      </div>
     <div class="violations-header">
         <div class="flex flex-align-center">
-            <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" src="../assets/icons/left-arrow.svg">
+            <!-- <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" src="../assets/icons/left-arrow.svg"> -->
             <span class="title">{{ breadcrumbPresent }}</span>
         </div>
     </div>
