--- a/webapp/src/app/pacman-features/modules/admin/account-management-details/account-management-details.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/account-management-details/account-management-details.component.html
@@ -3,7 +3,7 @@
         <div class="padding-top"></div>
         <div class="floating-widgets-header flex flex-between">
             <div>
-                <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+                <!-- <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg"> -->
                 <h1 class="title-text">
                     <span *ngIf='isCreateFlow'>Create Account</span>
                     <span *ngIf="!isCreateFlow">Edit Account</span>
