--- a/webapp/src/app/pacman-features/modules/admin/account-management/account-management.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/account-management/account-management.component.html
@@ -3,7 +3,7 @@
         <div class="padding-top"></div>
         <div class="floating-widgets-header flex flex-between">
             <div>
-                <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+                <!-- <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg"> -->
                 <h1 class="title-text">{{pageTitle}}</h1>
             </div>
             <app-button (click)='goToCreate()'>CREATE</app-button>
