--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/target-types/create-update-target-types/create-update-target-types.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/target-types/create-update-target-types/create-update-target-types.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="floating-widgets-header flex flex-between">
         <div>
-            <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;"
+            <!-- <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" -->
                 src="../assets/icons/left-arrow.svg">
             <h1 class="title-text">{{pageTitle}}</h1>
         </div>
