--- a/webapp/src/app/pacman-features/modules/admin/plugin-management/plugin-management.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/plugin-management/plugin-management.component.html
@@ -5,7 +5,7 @@
       </div>
       <div class="floating-widgets-header flex flex-between">
           <div>
-              <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+              <!-- <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg"> -->
               <h1 class="title-text">{{pageTitle}}</h1>
           </div>
       </div>
