--- a/webapp/src/app/pacman-features/modules/assets/asset-distribution/asset-distribution.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-distribution/asset-distribution.component.html
@@ -3,7 +3,7 @@
         <app-breadcrumb *ngIf="breadcrumbLinks.length>0" [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="pageTitle"></app-breadcrumb>
     </div>
     <div class="flex">
-        <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" src="../assets/icons/left-arrow.svg">
+        <!-- <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" src="../assets/icons/left-arrow.svg"> -->
         <h6 class="sub-header-text">{{ pageTitle }}</h6>
     </div>
 </div>
