--- a/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
@@ -3,7 +3,7 @@
         <app-breadcrumb *ngIf="breadcrumbLinks.length>0" [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
      </div>
     <div class="flex">
-        <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+        <!-- <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg"> -->
         <h6 class="title-text">{{pageTitle}}</h6>
     </div>
     <div class="data-table-container">
