--- a/webapp/src/app/pacman-features/modules/assets/onprem-assets/onprem-assets.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/onprem-assets/onprem-assets.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="floating-widgets-header flex flex-between">
         <div>
-            <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+            <!-- <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg"> -->
             <h1 class="title-text">{{pageTitle}}</h1>
         </div>
         <div class='onprem-button-wrap'>
