--- a/webapp/src/app/pacman-features/modules/compliance/certificate-compliance/certificate-compliance.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/certificate-compliance/certificate-compliance.component.html
@@ -17,7 +17,7 @@
         <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
         <div class="floating-widgets-header flex flex-between">
             <div>
-                <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+                <!-- <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg"> -->
                 <h1 class="title-text">{{pageTitle}}</h1>
             </div>
         </div>
