--- a/webapp/src/app/pacman-features/modules/compliance/patching-projections/patching-projections.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/patching-projections/patching-projections.component.html
@@ -17,7 +17,7 @@
       <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
       <div class="floating-widgets-header flex flex-between">
           <div>
-              <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+              <!-- <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg"> -->
               <h1 class="title-text">{{pageTitle}}</h1>
           </div>
       </div>
