--- a/webapp/src/app/pacman-features/modules/compliance/tagging-compliance/tagging-compliance.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/tagging-compliance/tagging-compliance.component.html
@@ -16,7 +16,7 @@
     <div class="floating-widgets-section flex flex-col">
         <div class="padding-top"></div>
         <div class="floating-widgets-header flex flex-between">
-                <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+                <!-- <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg"> -->
                 <h1 class="title-text">{{pageTitle}}</h1>
         </div>
         <div class="floating-widgets-container">
